nginx-ingress/servicio_ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-controller
  namespace: ingress-controller
  labels:
    app: ingress-nginx
spec:
  type: NodePort
  selector:
    name: nginx-ingress
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
