nginx-ingress/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - host: grafana.35.178.163.89.nip.io
    http:
      paths:
      - path: "/"
        backend:
          serviceName: grafana
          servicePort: 80
