nginx-ingress/grafana-services.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-grafana
spec:
  backend:
    serviceName: ingress-controller
    servicePort: 3000
